--- a/app/globals.css
+++ b/app/globals.css
@@ -12,10 +12,12 @@
   }
 }
 
-
-
 body {
   color: rgb(var(--foreground-rgb));
-  padding: 1rem;
-    
+}
+
+@layer base{
+  h1 {
+    @apply font-extrabold text-2xl mb-3;
+  }
 }
